# server/mergin/stats/controller.py
@@ -2,14 +2,15 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-MerginMaps-Commercial
 
-from dataclasses import asdict
 import requests
-from flask import abort, current_app, make_response
+from flask import abort, current_app, make_response, request
 from datetime import datetime, time
 from csv import DictWriter
+from pathvalidate import sanitize_filename
 
 from mergin.auth.app import auth_required
 from mergin.stats.models import MerginStatistics, ServerCallhomeData
+from mergin.stats.utils import save_diagnostic_log_file
 
 from .config import Configuration
 from ..app import parse_version_string, db
@@ -88,3 +89,29 @@ def download_report(date_from: str, date_to: str):
     response.headers["Content-Disposition"] = f"attachment; filename=usage-report.csv"
     response.mimetype = "text/csv"
     return response
+
+
+def save_diagnostic_log(app: str, username: str):
+    """Save diagnostic logs"""
+    # if server is using external storage, we don't want to save logs
+    if app.config.get("DIAGNOSTIC_LOGS_URL"):
+        abort(404)
+
+    # check if plain text body is not larger than 1MB
+    max_size = 1024 * 1024
+    if request.content_length > max_size:
+        abort(413)
+    # get body from request
+    body = request.get_data()
+    if not body:
+        abort(400)
+    if len(body) > max_size:
+        abort(413)
+
+    # save diagnostic log file
+    folder = current_app.config.get("DIAGNOSTIC_LOGS_DIR")
+    save_diagnostic_log_file(
+        app, username, body, current_app.config["DIAGNOSTIC_LOGS_DIR"]
+    )
+
+    return "Log saved successfully", 200
